# Skima

./: .dockerignore  .gitattributes  .gitignore  BACKEND_API_PROMPT.md  CLAUDE.md  DASHBOARD_PROPOSAL copy.md  DASHBOARD_PROPOSAL.md  Dockerfile  FINAL_UX_AUDIT.md  LICENSE  PRODUCT_STRATEGY_ULTRATHINK.md  README.md  ROADMAP.md  SETTINGS_REPORTS_UX_ULTRATHINK.md  TEAM_MATRIX_AUDIT.md  TEMPORAL_CONTEXT_PROPOSAL.md  TODO.md  UX-UI-AUDIT-REPORT.md  docker-compose.demo.yml  docker-compose.yml  package-lock.json  package.json  playwright.config.js  temp_api.json
.github/workflows/: build.yml  docker.yml  quality.yml  release.yml
client/: eslint.config.js  index.html  lint.json  package-lock.json  package.json  tailwind.config.js  vite.config.js  vitest.config.js
client/public/: site.webmanifest
client/src/: App.jsx  SkillsDashboard.jsx  index.css
docker/: entrypoint.sh
docs/: visual-identity.md
docs/plans/: 2026-03-07-landing-demo-design.md  2026-03-07-sprint1-demo-backend.md  competitive-analysis.md  (+2 more)
e2e/: demo-mode.spec.js  idp-comprehensive.spec.js  idp-flow.spec.js  smoke.spec.js  visual-audit.spec.js
scripts/: aggregate-updater-json.js  build-macos.sh  bump-version.js
server/: .env  .env.example  debug_output.txt  debug_pedro.js  package-lock.json  package.json  vitest.config.js
src-tauri/: Cargo.toml  Info.plist  entitlements.plist  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/icons/Skima.icon/: icon.json
src-tauri/resources/: Assets.car
src-tauri/src/: lib.rs  main.rs
(+183 files in other folders)
