[package]
name = "skima"
version = "1.3.3"
description = "Skima - People Development Platform"
authors = ["DLSLabs"]
edition = "2024"

[lib]
name = "skima_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
